--- a/ClientRuntimes/Java/azure-client-runtime/build.gradle
+++ b/ClientRuntimes/Java/azure-client-runtime/build.gradle
@@ -25,6 +25,7 @@ repositories {
 
 dependencies {
     compile 'com.microsoft.rest:client-runtime:0.0.1-SNAPSHOT'
+    compile 'com.microsoft.azure:adal4j:1.1.2'
     testCompile 'junit:junit:4.11'
     testCompile 'junit:junit-dep:4.11'
     deployerJars "org.apache.maven.wagon:wagon-ftp:2.10"
