Add AzureServiceClient and fix LRO default timeout

--- a/ClientRuntimes/Java/azure-client-runtime/build.gradle
+++ b/ClientRuntimes/Java/azure-client-runtime/build.gradle
@@ -79,6 +79,15 @@ javadoc {
     options.encoding = 'UTF-8'
 }
 
+task sourcesJar(type: Jar, dependsOn:classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives sourcesJar
+}
+
 test {
     reports.getHtml()
     reports.html.destination = file("${projectDir}/../../../TestResults/JavaAzureRuntime")
