Header parameter isn't set correctly. Don't generate listNext function since we already handle in Paged class.

--- a/AutoRest/Generators/Python/Azure.Python/AutoRest.Generator.Azure.Python.csproj
+++ b/AutoRest/Generators/Python/Azure.Python/AutoRest.Generator.Azure.Python.csproj
@@ -27,6 +27,7 @@
     <Compile Include="$(SolutionDir)\Tools\AssemblyVersionInfo.cs">
       <Link>Properties\AssemblyVersionInfo.cs</Link>
     </Compile>
+    <Compile Include="AzurePythonCodeNamer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="AzurePythonCodeGenerator.cs" />
