--- a/AutoRest/Generators/Python/Python.Tests/tox.ini
+++ b/AutoRest/Generators/Python/Python.Tests/tox.ini
@@ -5,7 +5,7 @@ skipsdist=True
 [testenv]
 commands=
     coverage run ./AcceptanceTests/__init__.py
-    coverage report --fail-under=0 --omit=*tests*
+    coverage report --fail-under=50 --omit=AcceptanceTests\*.py
     flake8 . --exclude=*Python.Tests\AcceptanceTests\*.py --statistics
     
 [testenv:py27]
