--- a/AutoRest/Generators/Python/Python.Tests/tox.ini
+++ b/AutoRest/Generators/Python/Python.Tests/tox.ini
@@ -6,7 +6,7 @@ skipsdist=True
 commands=
     coverage run ./AcceptanceTests/__init__.py
     coverage report --fail-under=50 --omit=AcceptanceTests\*.py
-    flake8 . --max-line-length=100 --exclude=*Python.Tests\AcceptanceTests\*.py --statistics
+    flake8 . --max-line-length=100 --exclude=*Python.Tests\AcceptanceTests\*.py,*Python.Tests\bin\* --statistics
     
 setenv =
     PythonLogLevel=30
