--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 language: csharp
+sudo: false
 mono:
   - beta
+addons:
+  apt:
+    sources:
+    - debian-sid
+    packages:
+    - libunwind8
 install:
   - curl -sSL https://raw.githubusercontent.com/aspnet/Home/dev/dnvminstall.sh | sh && source ~/.dnx/dnvm/dnvm.sh && dnvm upgrade
   - npm install -g npm@'>=1.4.3'
@@ -9,8 +16,9 @@ install:
   - gem install bundler
   - bundle install
 script:
-  - dnvm install 1.0.0-beta8
-  - dnvm use 1.0.0-beta8 -persistent
+  - dnvm install 1.0.0-rc1-final -r mono
+  - dnvm install 1.0.0-rc1-final -r coreclr
+  - dnvm use 1.0.0-rc1-final -r coreclr -persistent
   - gulp
 after_script:
   - echo "========== Server log: ============"
