--- a/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime.Log4Net/project.json
+++ b/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime.Log4Net/project.json
@@ -10,6 +10,11 @@
   "projectUrl": "https://github.com/Azure/AutoRest",
   "licenseUrl": "https://raw.githubusercontent.com/Microsoft/dotnet/master/LICENSE",
 
+  "compilationOptions": {
+    "delaySign": true,
+    "keyFile": "../../../Tools/MSSharedLibKey.snk"
+  },
+
   "frameworks": {
     "net45": {
       "frameworkAssemblies": {
@@ -19,7 +24,7 @@
         "System.Net.Http.WebRequest": "",
         "System.Xml": ""
       }
-    }    
+    }
   },
 
   "dependencies": {
