Update client runtime for bug fixes.
Changed raw workflow and CloudError

Moved China auth configuration

Added file stream raw tests

Use new ClientRawResponse to handle raw response

msrestazure tox cleanup

Added msrestazure tests

Client will deserialize the header in raw mode.

fixed unicode compatibility (basestring)

Fixed failed cookie retry

--- a/AutoRest/Generators/Python/Azure.Python/AutoRest.Generator.Azure.Python.csproj
+++ b/AutoRest/Generators/Python/Azure.Python/AutoRest.Generator.Azure.Python.csproj
@@ -45,6 +45,12 @@
     <Compile Include="Templates\AzureMethodGroupTemplate.cs">
       <DependentUpon>AzureMethodGroupTemplate.cshtml</DependentUpon>
     </Compile>
+    <Compile Include="Templates\AzureLongRunningMethodTemplate.cs">
+      <DependentUpon>AzureLongRunningMethodTemplate.cshtml</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\AzurePagingMethodTemplate.cs">
+      <DependentUpon>AzurePagingMethodTemplate.cshtml</DependentUpon>
+    </Compile>
     <Compile Include="Templates\AzureMethodTemplate.cs">
       <DependentUpon>AzureMethodTemplate.cshtml</DependentUpon>
     </Compile>
@@ -58,6 +64,8 @@
       <DependentUpon>PageTemplate.cshtml</DependentUpon>
     </Compile>
     <None Include="Templates\AzureMethodGroupTemplate.cshtml" />
+    <None Include="Templates\AzureLongRunningMethodTemplate.cshtml" />
+    <None Include="Templates\AzurePagingMethodTemplate.cshtml" />
     <None Include="Templates\AzureModelInitTemplate.cshtml" />
     <None Include="Templates\AzureServiceClientTemplate.cshtml" />
     <None Include="Templates\AzureMethodTemplate.cshtml" />
