CR cleanups and test fixes

--- a/ClientRuntimes/Python/msrest/tox.ini
+++ b/ClientRuntimes/Python/msrest/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=py27,py35
+envlist=py27,py33,py34,py35
 skipsdist=True
 
 [testenv]
@@ -12,6 +12,18 @@ commands=
 [testenv:py27]
 deps=
     -rrequirements27.txt 
+    coverage
+    flake8
+
+[testenv:py33]
+deps=
+    -rrequirements27.txt 
+    coverage
+    flake8
+
+[testenv:py34]
+deps=
+    -rrequirements35.txt 
     coverage
     flake8
 
