--- a/ClientRuntimes/Python/msrestazure/tox.ini
+++ b/ClientRuntimes/Python/msrestazure/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=py27,py35
+envlist=py27,py33,py34,py35
 skipsdist=True
 
 [testenv]
@@ -11,12 +11,24 @@ commands=
 
 [testenv:py27]
 deps=
-    -rrequirements27.txt
+    -rrequirements27.txt 
+    coverage
+    flake8
+
+[testenv:py33]
+deps=
+    -rrequirements27.txt 
+    coverage
+    flake8
+
+[testenv:py34]
+deps=
+    -rrequirements35.txt 
     coverage
     flake8
 
 [testenv:py35]
 deps=
-    -rrequirements35.txt
+    -rrequirements35.txt 
     coverage
     flake8
