--- a/AutoRest/Generators/Java/Azure.Java.Tests/build.gradle
+++ b/AutoRest/Generators/Java/Azure.Java.Tests/build.gradle
@@ -26,6 +26,7 @@ repositories {
 }
 
 checkstyle {
+    toolVersion = "6.9"
     configFile = new File("$rootDir/Tools/checkstyle/checkstyle.xml")
     configProperties = [samedir: "$rootDir/Tools/checkstyle"]
     reportsDir = new File("$rootDir/Tools/checkstyle/reports")
