--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,46 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.3.0'
+    }
+}
+
 subprojects {
-    apply plugin: 'java'
     group = 'com.microsoft.rest'
 }
 
 project(':azure-client-runtime') {
+    apply plugin: 'java'
+    dependencies {
+        compile project(':client-runtime')
+    }
+}
+
+project(':azure-client-authentication') {
+    apply plugin: 'java'
+    dependencies {
+        compile project(':client-runtime')
+    }
+}
+
+project(':azure-android-client-authentication') {
+    apply plugin: 'com.android.library'
     dependencies {
         compile project(':client-runtime')
     }
 }
 
 project(':codegen-tests') {
+    apply plugin: 'java'
     dependencies {
         compile project(':client-runtime')
     }
 }
 
 project(':azure-codegen-tests') {
+    apply plugin: 'java'
     dependencies {
         compile project(':client-runtime')
         compile project(':azure-client-runtime')
