--- a/settings.gradle
+++ b/settings.gradle
@@ -1,12 +1,17 @@
+include ':azure-android-client-authentication'
 final PROJECT_ROOT = '.'
 final RUNTIME_ROOT = "$PROJECT_ROOT/ClientRuntimes/Java"
 final TEST_ROOT = "$PROJECT_ROOT/AutoRest/Generators/Java"
 include \
 		'client-runtime',
 		'azure-client-runtime',
+        'azure-client-authentication',
+        'azure-android-client-authentication',
 		'codegen-tests',
 		'azure-codegen-tests'
 project(':client-runtime').projectDir = new File("$RUNTIME_ROOT/client-runtime")
 project(':azure-client-runtime').projectDir = new File("$RUNTIME_ROOT/azure-client-runtime")
+project(':azure-client-authentication').projectDir = new File("$RUNTIME_ROOT/azure-client-authentication")
+project(':azure-android-client-authentication').projectDir = new File("$RUNTIME_ROOT/azure-android-client-authentication")
 project(':codegen-tests').projectDir = new File("$TEST_ROOT/Java.Tests")
 project(':azure-codegen-tests').projectDir = new File("$TEST_ROOT/Azure.Java.Tests")
