--- a/AutoRest/Generators/Extensions/Azure.Extensions.Tests/AutoRest.Generator.Azure.Extensions.Tests.csproj
+++ b/AutoRest/Generators/Extensions/Azure.Extensions.Tests/AutoRest.Generator.Azure.Extensions.Tests.csproj
@@ -26,7 +26,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CSharpAzureCodeNamingFrameworkTests.cs" />
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="SampleAzureCodeNamer.cs" />
     <Compile Include="SampleAzureCodeGenerator.cs" />
     <None Include="$(SolutionDir)\AutoRest\AutoRest\AutoRest.json">
       <Link>AutoRest.json</Link>
@@ -35,6 +37,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AzureServiceClientNormalizerTests.cs" />
     <None Include="app.config" />
+    <None Include="Swagger\azure-paging.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Swagger\resource-external-false.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -56,6 +61,26 @@
     <ProjectReference Include="..\..\..\Modelers\Swagger\AutoRest.Modeler.Swagger.csproj">
       <Project>{9517265e-5127-460c-9dde-fe017d73121c}</Project>
       <Name>AutoRest.Modeler.Swagger</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\CSharp\Azure.CSharp\AutoRest.Generator.Azure.CSharp.csproj">
+      <Project>{4899b527-6815-4e89-84b3-dd5a507b205a}</Project>
+      <Name>AutoRest.Generator.Azure.CSharp</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\CSharp\CSharp\AutoRest.Generator.CSharp.csproj">
+      <Project>{cc1eec95-41ef-44b6-8761-00fa3e647248}</Project>
+      <Name>AutoRest.Generator.CSharp</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Java\Azure.Java\AutoRest.Generator.Azure.Java.csproj">
+      <Project>{afd3f1c4-5c59-4018-b0bb-030e0da57c5c}</Project>
+      <Name>AutoRest.Generator.Azure.Java</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\NodeJS\Azure.NodeJS\AutoRest.Generator.Azure.NodeJS.csproj">
+      <Project>{909bf4ef-4eca-4ac4-8e21-cdcf05393161}</Project>
+      <Name>AutoRest.Generator.Azure.NodeJS</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Ruby\Azure.Ruby\AutoRest.Generator.Azure.Ruby.csproj">
+      <Project>{31931998-7543-41da-9e58-d9670d810352}</Project>
+      <Name>AutoRest.Generator.Azure.Ruby</Name>
     </ProjectReference>
     <ProjectReference Include="..\Azure.Extensions\AutoRest.Generator.Azure.Extensions.csproj">
       <Project>{90b943ab-3879-4b64-b9ff-1a21297c0f26}</Project>
