--- a/AutoRest/Generators/Extensions/Azure.Extensions/AutoRest.Generator.Azure.Extensions.csproj
+++ b/AutoRest/Generators/Extensions/Azure.Extensions/AutoRest.Generator.Azure.Extensions.csproj
@@ -24,6 +24,7 @@
     <Compile Include="$(SolutionDir)\Tools\AssemblyVersionInfo.cs">
       <Link>Properties\AssemblyVersionInfo.cs</Link>
     </Compile>
+    <Compile Include="Model\PageableExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -60,5 +61,6 @@
       <Link>CustomDictionary.xml</Link>
     </CodeAnalysisDictionary>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
