serialization in ms-rest

--- a/ClientRuntimes/NodeJS/ms-rest/package.json
+++ b/ClientRuntimes/NodeJS/ms-rest/package.json
@@ -33,7 +33,8 @@
     "jshint": "2.6.3",
     "xunit-file": "0.0.5",
     "mocha": "2.2.5",
-    "should": "5.2.0"
+    "should": "5.2.0",
+    "moment":  "*"
   },
   "homepage": "https://github.com/Azure/AutoRest",
   "repository": {
