--- a/ClientRuntimes/NodeJS/ms-rest-azure/package.json
+++ b/ClientRuntimes/NodeJS/ms-rest-azure/package.json
@@ -30,6 +30,7 @@
     "xunit-file": "0.0.5",
     "mocha": "2.2.5",
     "should": "5.2.0",
+    "moment":  "*",
     "underscore": "*"
   },
   "homepage": "https://github.com/Azure/AutoRest",
