--- a/AutoRest/TestServer/server/package.json
+++ b/AutoRest/TestServer/server/package.json
@@ -6,15 +6,14 @@
     "start": "node ./startup/www"
   },
   "dependencies": {
-    "body-parser": "~1.12.0",
-    "cookie-parser": "~1.3.4",
     "busboy": "*",
-    "debug": "~2.1.1",
-    "express": "~4.12.2",
+    "body-parser": "~1",
+    "cookie-parser": "~1",
+    "debug": "~2",
+    "express": "~4",
     "jade": "~1.9.2",
-    "morgan": "~1.5.1",
+    "morgan": "~1",
     "serve-favicon": "~2.2.0",
-    "underscore": "*",
-    "morgan": "1.6.1"
+    "underscore": "*"
   }
 }
