--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,6 @@ addons:
     - debian-sid
     packages:
     - libunwind8
-    - tree
 install:
   - curl -sSL https://raw.githubusercontent.com/aspnet/Home/dev/dnvminstall.sh | sh && source ~/.dnx/dnvm/dnvm.sh && dnvm upgrade
   - npm install -g npm@'>=1.4.3'
@@ -20,7 +19,9 @@ script:
   - dnvm install 1.0.0-rc1-final -r mono
   - dnvm install 1.0.0-rc1-final -r coreclr
   - dnvm use 1.0.0-rc1-final -r coreclr -persistent
-  - tree
+  - ls -la /home/travis/build/Azure/autorest/AutoRest/Generators/CSharp/Azure.CSharp.Tests/
+  - ls -la /home/travis/build/Azure/autorest/TestResults/
+  - ls -la /home/travis/build/Azure/autorest/AutoRest/Generators/CSharp/CSharp.Tests/
   - gulp
 after_script:
   - echo "========== Server log: ============"
