--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ script:
   - dnvm install 1.0.0-rc1-final -r mono
   - dnvm install 1.0.0-rc1-final -r coreclr
   - dnvm use 1.0.0-rc1-final -r coreclr -persistent
+  - dnx -h
+  - which dnx
   - gulp
 after_script:
   - echo "========== Server log: ============"
