--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ addons:
     packages:
     - libunwind8
 install:
+  - cat /etc/hosts
   - curl -sSL https://raw.githubusercontent.com/aspnet/Home/dev/dnvminstall.sh | sh && source ~/.dnx/dnvm/dnvm.sh && dnvm upgrade
   - npm install -g npm@'>=1.4.3'
   - npm install
@@ -20,14 +21,8 @@ script:
   - dnvm install 1.0.0-rc1-final -r mono
   - dnvm install 1.0.0-rc1-final -r coreclr
   - dnvm use 1.0.0-rc1-final -r coreclr -persistent
-  - dnx -h
-  - which dnx
   - gulp
 after_script:
-  - echo "========== Server log: ============"
-  - pwd
-  - ls -al
-  - ls -al TestResults
   - cat TestResults/*.log
 notifications:
   slack:
