--- a/AutoRest/Generators/Extensions/Azure.Extensions/AutoRest.Generator.Azure.Extensions.csproj
+++ b/AutoRest/Generators/Extensions/Azure.Extensions/AutoRest.Generator.Azure.Extensions.csproj
@@ -24,6 +24,7 @@
     <Compile Include="$(SolutionDir)\Tools\AssemblyVersionInfo.cs">
       <Link>Properties\AssemblyVersionInfo.cs</Link>
     </Compile>
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Model\PageableExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
