Fix python failures related to shell execution
  - Also fix issues related to wildcards being different
    on windows and linux.

--- a/AutoRest/Generators/Python/Python.Tests/tox.ini
+++ b/AutoRest/Generators/Python/Python.Tests/tox.ini
@@ -5,8 +5,8 @@ skipsdist=True
 [testenv]
 commands=
     coverage run ./AcceptanceTests/__init__.py
-    coverage report --fail-under=40 --omit=AcceptanceTests\*.py
-    flake8 . --exclude=*Python.Tests\AcceptanceTests\*.py,*Python.Tests\bin\* --statistics
+    coverage report --fail-under=40 --omit=AcceptanceTests*.py
+    flake8 . --exclude=*Python.Tests*AcceptanceTests*.py,*Python.Tests*bin.* --statistics
     
 setenv =
     PythonLogLevel=30
