--- a/ClientRuntimes/NodeJS/ms-rest/package.json
+++ b/ClientRuntimes/NodeJS/ms-rest/package.json
@@ -6,7 +6,7 @@
     "url": "https://github.com/Azure/AutoRest"
   },
   "version": "1.5.0",
-  "description": "Client Runtime for nodeJS client libraries generated using AutoRest",
+  "description": "Client Runtime for Node.js client libraries generated using AutoRest",
   "tags": ["node", "microsoft", "autorest", "clientruntime"],
   "keywords": ["node", "microsoft", "autorest", "clientruntime"],
   "main": "./lib/msRest.js",
