--- a/ClientRuntimes/Java/azure-client-authentication/build.gradle
+++ b/ClientRuntimes/Java/azure-client-authentication/build.gradle
@@ -32,6 +32,7 @@ repositories {
 
 dependencies {
     compile 'com.microsoft.azure:adal4j:1.1.2'
+    compile 'com.microsoft.rest:client-runtime:0.0.4-SNAPSHOT'
     testCompile 'junit:junit:4.11'
     testCompile 'junit:junit-dep:4.11'
     deployerJars "org.apache.maven.wagon:wagon-ftp:2.10"
