Update coverage ignore strings to ignore .tox
  - To prevent .tox stuff from showing up in the coverage report,
    which it does in Linux but not in Windows for some reason.

--- a/ClientRuntimes/Python/msrestazure/tox.ini
+++ b/ClientRuntimes/Python/msrestazure/tox.ini
@@ -6,7 +6,7 @@ skipsdist=True
 changedir=test
 commands=
     coverage run -m unittest discover -s . -p unittest*.py -t .. -v
-    coverage report --fail-under=30 --omit=*test* --include=*msrestazure*
+    coverage report --fail-under=30 --omit=*test*,*.tox*.py --include=*msrestazure*
     flake8 .. --exclude=unittest*.py --statistics
 
 [testenv:py27]
