--- a/ClientRuntimes/Python/msrest/tox.ini
+++ b/ClientRuntimes/Python/msrest/tox.ini
@@ -6,7 +6,7 @@ skipsdist=True
 changedir=test
 commands=
     coverage run -m unittest discover -s . -p unittest*.py -t .. -v
-    coverage report --fail-under=40 --omit=unittest*
+    coverage report --fail-under=40 --omit=unittest*,*.tox*.py
     flake8 .. --exclude=unittest*.py --statistics
 
 [testenv:py27]
