--- a/AutoRest/Modelers/Swagger/AutoRest.Modeler.Swagger.csproj
+++ b/AutoRest/Modelers/Swagger/AutoRest.Modeler.Swagger.csproj
@@ -29,6 +29,7 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="JsonConverters\ResponseRefConverter.cs" />
     <Compile Include="Model\Header.cs" />
+    <Compile Include="Model\CodeGenerationSettings.cs" />
     <Compile Include="ObjectBuilder.cs" />
     <Compile Include="OperationBuilder.cs" />
     <Compile Include="SchemaBuilder.cs" />
