Change Microsoft.Rest.ClientRuntime.Azure.Authentication ADAL dependency to be exact

--- a/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime.Azure.Authentication/project.json
+++ b/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime.Azure.Authentication/project.json
@@ -28,7 +28,7 @@
     },
     "net45": {
       "dependencies": {
-        "Microsoft.IdentityModel.Clients.ActiveDirectory": "2.18.206251556"
+        "Microsoft.IdentityModel.Clients.ActiveDirectory": "[2.18.206251556]"
       }
     }
   }
