Fixed payload flattening for constant properties

--- a/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime/project.json
+++ b/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime/project.json
@@ -23,6 +23,7 @@
         "System.Net": "",
         "System.Net.Http": "",
         "System.Net.Http.WebRequest": "",
+        "System.Runtime.Serialization": "",
         "System.Xml": ""
       },
       "dependencies": {
