Addressed fxcop issues

--- a/AutoRest/Modelers/CompositeSwagger.Tests/AutoRest.Modeler.CompositeSwagger.Tests.csproj
+++ b/AutoRest/Modelers/CompositeSwagger.Tests/AutoRest.Modeler.CompositeSwagger.Tests.csproj
@@ -100,7 +100,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CompositeSwaggerModelerTests.cs" />
-    <Compile Include="SwaggerSpecHelper.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\AutoRest.Core\AutoRest.Core.csproj">
