--- a/AutoRest/Modelers/CompositeSwagger/AutoRest.Modeler.CompositeSwagger.csproj
+++ b/AutoRest/Modelers/CompositeSwagger/AutoRest.Modeler.CompositeSwagger.csproj
@@ -25,7 +25,9 @@
       <Link>Properties\AssemblyVersionInfo.cs</Link>
     </Compile>
     <Compile Include="CompositeSwaggerModeler.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Model\CompositeServiceDefinition.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
