--- a/AutoRest/Generators/NodeJS/NodeJS.Tests/AutoRest.Generator.NodeJS.Tests.csproj
+++ b/AutoRest/Generators/NodeJS/NodeJS.Tests/AutoRest.Generator.NodeJS.Tests.csproj
@@ -106,6 +106,11 @@
     <Content Include="AcceptanceTests\sample.png" />
     <Content Include="AcceptanceTests\startServer.js" />
     <Content Include="AcceptanceTests\testlist.txt" />
+    <Content Include="Expected\AcceptanceTests\CustomBaseUri\autoRestParameterizedHostTestClient.js" />
+    <Content Include="Expected\AcceptanceTests\CustomBaseUri\models\errorModel.js" />
+    <Content Include="Expected\AcceptanceTests\CustomBaseUri\models\index.js" />
+    <Content Include="Expected\AcceptanceTests\CustomBaseUri\operations\index.js" />
+    <Content Include="Expected\AcceptanceTests\CustomBaseUri\operations\paths.js" />
     <None Include="Expected\AcceptanceTests\ComplexModelClient\complexModelClient.js">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -155,6 +160,9 @@
     <None Include="Expected\AcceptanceTests\ComplexModelClient\models\index.d.ts">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <TypeScriptCompile Include="Expected\AcceptanceTests\CustomBaseUri\autoRestParameterizedHostTestClient.d.ts" />
+    <TypeScriptCompile Include="Expected\AcceptanceTests\CustomBaseUri\models\index.d.ts" />
+    <TypeScriptCompile Include="Expected\AcceptanceTests\CustomBaseUri\operations\index.d.ts" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
