Adding CompositeSwagger Modeler definition to AutorestRelease.json

--- a/AutoRest/AutoRest/AutoRest.Release.json
+++ b/AutoRest/AutoRest/AutoRest.Release.json
@@ -22,6 +22,9 @@
   "modelers": {
     "Swagger": {
       "type": "SwaggerModeler, AutoRest.Modeler.Swagger"
+    },
+    "CompositeSwagger": {
+      "type": "CompositeSwaggerModeler, AutoRest.Modeler.CompositeSwagger"
     }
   }
 }
