Added compositeSwagger.dll to the nuspec

--- a/AutoRest/AutoRest.Core/AutoRest.nuspec
+++ b/AutoRest/AutoRest.Core/AutoRest.nuspec
@@ -28,6 +28,7 @@
     <file src="binaries/net45/AutoRest.Generator.Ruby.dll" target="tools" />
     <file src="binaries/net45/AutoRest.Generator.Azure.Ruby.dll" target="tools" />
     <file src="binaries/net45/AutoRest.Modeler.Swagger.dll" target="tools" />
+    <file src="binaries/net45/AutoRest.Modeler.CompositeSwagger.dll" target="tools" />
     <file src="binaries/net45/Newtonsoft.Json.dll" target="tools" />
   </files>
 </package>
